<resources>
    <string name="app_name">Classgram</string>

    <!-- Login -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Log in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="emailVerify">"In order to complete your account, we need to verify your email address. Link has been sent to the email provided: "</string>

    <!-- Home -->
    <string name="home_title">Feed 📖</string>


    <!-- Firebase -->
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="verify_email">Verify</string>
    <string name="reload">Reload</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="schedule">Schedule</string>
    <string name="me">Me</string>
    <string name="or">OR</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">classgram-app</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbclassgram-app</string>
    <string name="dont_have_an_account">Dont\' have an account?</string>
    <string name="sign_up2">SIGN UP!</string>
    <string name="backround">Backround</string>
    <string name="create_your_account">Create your account 📝</string>
    <string name="by_continuing_you_agree_to_accept_our_privacy_policy_terms_of_service"><![CDATA[By continuing, you agree to accept our Privacy Policy & Terms of Service.]]></string>
    <string name="go_back_to_login">Go back to login</string>
    <string name="reset_your_password">Reset your password 🔧</string>
    <string name="get_reset_email">Get reset email</string>
    <string name="camera">Camera</string>
    <string name="username">Username</string>
    <string name="headline">Headline</string>
    <string name="timeago">timeAgo</string>
    <string name="description">Description</string>
    <string name="_0">0</string>
    <string name="settings">Settings</string>
    <string name="books_emoji">📚</string>
    <string name="notifications">Notifications</string>
    <string name="connect">Connect</string>
    <string name="message">Message</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="answers">Answers</string>
    <string name="connections">Connections</string>
    <string name="posts">Posts</string>
    <string name="about">About</string>
    <string name="ask_a_specific_question">Ask a specific question…</string>
    <string name="post">Post</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_s_logo_description">App´s logo</string>
    <string name="please_enter_your_personal_information_label">Please Enter Your Personal Information</string>
    <string name="please_enter_your_email_label">Please Enter Your Email</string>


    <!-- Snackbar -->
    <string name="got_it" translation_description="The label for dismissing a information messages.">Got it</string>
    <string name="dont_show" translation_description="The label for opting out of in-app notification messages.">Don\'t show</string>

    <string name="title_activity_chat">Chats</string>
    <string name="send">Send</string>
    <string name="textfield_hint">Message #user_name</string>
    <string name="emojis_label">Emojis</string>
    <string name="stickers_label">Stickers</string>
    <string name="jumpBottom">Jump to bottom</string>
    <!-- Accessibility descriptions -->

    <string name="emoji_selector_desc">Emoji selector</string>
    <string name="emoji_selector_bt_desc">Show Emoji selector</string>
    <string name="dm_desc">Direct Message</string>
    <string name="attach_photo_desc">Attach Photo</string>
    <string name="map_selector_desc">Location selector</string>
    <string name="videochat_desc">Start videochat</string>
    <string name="textfield_desc">Text input</string>
    <string name="not_available">Functionality currently not available</string>
    <string name="not_available_subtitle">Grab a beverage and check back later!</string>
    <string name="attached_image">Attached image</string>
    <string name="search">Search</string>
    <string name="info">Information</string>
    <string name="more_options">More options</string>
    <string name="votes_label">Votes</string>
    <string name="answers_label">Answers</string>
    <string name="views_label">Views</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="filter_label">filter</string>
    <string name="timetable_label">Timetable</string>
    <string name="calendar_label">Calendar</string>
    <string name="agenda_label">Agenda</string>
    <string name="title_label">Title</string>
    <string name="location_label">Location</string>
    <string name="from_label">From</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="to_label">To</string>
    <string name="all_day_label">All day</string>
    <string name="notes_label">Notes</string>
    <string name="save_label">Save</string>
    <string name="jump_to_today_label">Jump To Today</string>
    <string name="event_duration_location" translatable="false">%1s / %2s</string>


</resources>