<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:id="@+id/home_nav"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />

    <item android:id="@+id/search_nav"
        android:enabled="true"
        android:title="@string/discover"
        android:icon="@drawable/ic_search" />

    <item android:id="@+id/placeholder"
        android:enabled="false"
        android:title="" />

    <item android:id="@+id/schedule_nav"
        android:enabled="true"
        android:title="@string/schedule"
        android:icon="@drawable/ic_date" />

    <item android:id="@+id/profile_nav"
        android:enabled="true"
        android:title="@string/me"
        android:icon="@drawable/ic_account" />

</menu>