<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ForgotPassActivity">

    <ImageView
        android:id="@+id/background_login"
        android:layout_width="751dp"
        android:layout_height="930dp"
        android:contentDescription="@string/backround"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502"
        app:srcCompat="@drawable/ipb" />

    <TextView
        android:id="@+id/resetPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:fontFamily="sans-serif"
        android:shadowColor="@color/black"
        android:text="@string/reset_your_password"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailReset"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_bg"
        android:backgroundTint="#DDDCD9D9"
        android:ems="10"
        android:hint="@string/hint_email"
        android:textColor="#272626"
        android:textColorHint="#808080"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassText" />

    <Button
        android:id="@+id/resetPassbtn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_bg"
        android:text="@string/get_reset_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailReset" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/resetPassbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailReset"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/backbtn2"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/fui_transparent"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test"
        android:focusable="true"
        android:contentDescription="@string/go_back_to_login" />





</androidx.constraintlayout.widget.ConstraintLayout>